<resources>
    <string name="app_name">Rutas</string>
    <string name="subTitle">Tu app de Rutas!</string>

    <!--Etiquetas del menu-->
    <string name="TAG_inicio">Inicio</string>
    <string name="TAG_puntos_interes">Puntos de interés</string>
    <string name="TAG_rutas">Rutas</string>
    <string name="TAG_mapa">Ver mapa</string>
    <string name="TAG_cuenta">Cuenta</string>
    <string name="TAG_configuracion">Configuracion</string>

    <!-- Etiquetas de Fragments -->
    <string name="titulo_tab_perfil">Perfil</string>
    <string name="etiqueta_info_usuario">Informacion del usuario</string>
    <string name="etiqueta_punto_salida">Punto de salida</string>

    <string name="titulo_tab_historial">Historial</string>
    <string name="etiqueta_fecha">Fecha</string>
    <string name="tiempo_empleado">Tiempo</string>
    <string name="distancia_total">Distancia</string>

    <string name="title_activity_maps">Map</string>

    <!-- Etiquetas sueltas -->
    <string name="google_app_id">1268</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="etiqueta_info_punto">Informacion del punto</string>
    <string name="title_activity_login">Entra</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
